Fixed flickering issue

--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -216,10 +216,10 @@
     
    .overlay_card {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    max-height: 360px;
+    max-width: 440px;
+    height: 100%;
+    width: 100%;
     background: rgba(0, 0, 0, 0.4);
     display: flex;
     align-items: center;
@@ -227,14 +227,14 @@
     opacity: 0;
     transition: opacity 0.1s ease-in-out;
     border-radius: 20px;
+    transform: translateX(-10px);
   }
     .card2:hover .overlay_card {
       opacity: 1;
+      background: rgba(0, 0, 0, 0.4);
     }
     .overlayIcon {
       color: white;
       font-size: 1.5rem;
     } 
   }
-  
-  
